DEP: update pom.xml