@@ -6,17 +6,18 @@
 	</properties>	
 	<groupId>com.github.jasmineRepo</groupId>
 	<artifactId>JAS-mine-gui</artifactId>
-	<version>4.0.11</version>
+	<version>5.0.0-alpha</version>
 	<build>
 		<plugins>
 			<plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-compiler-plugin</artifactId>
 		        <version>3.6.1</version>
-		        <configuration> <!-- Compile java 8 compatible bytecode -->
-		          <source>1.8</source>
-		          <target>1.8</target>
-		        </configuration>
+		        <configuration>
+		          <source>17</source>
+		          <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 		    </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -75,10 +76,6 @@
 			<artifactId>ilf-gpl</artifactId>
 			<version>1.6.1</version>
 		</dependency>
-		<!-- dependency> <groupId>org.formbuilder</groupId> <artifactId>formbuilder-main</artifactId> 
-			<version>1.1</version> </dependency> <groupId>cglib</groupId> <artifactId>cglib</artifactId> 
-			<version>2.2.2</version> </dependency> <dependency> <groupId>cglib</groupId> 
-			<artifactId>cglib-asm</artifactId> <version>1.0</version> </dependency -->
 		<dependency>
 		   <groupId>org.metawidget.modules</groupId>
 		   <artifactId>metawidget-all</artifactId>
@@ -87,12 +84,12 @@
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
-			<version>20030211.134440</version>
+			<version>1.9.4</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
-			<version>20040616</version>
+			<version>3.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -102,20 +99,17 @@
 		<dependency>
 		    <groupId>org.jfree</groupId>
 		    <artifactId>jfreechart</artifactId>
-		    <version>1.0.19</version>
+		    <version>1.5.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math</artifactId>
 			<version>2.2</version>
 		</dependency>
-
-		<!-- dependency> <groupId>net.sf.jchart2d</groupId> <artifactId>jchart2d</artifactId> 
-			<version>3.3.2</version> </dependency -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
+			<version>2.11.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jdesktop/beansbinding -->
 		<dependency>
@@ -126,7 +120,7 @@
 		<dependency>
 		    <groupId>com.github.jasmineRepo</groupId>
 		    <artifactId>JAS-mine-core</artifactId>
-	    <version>4.0.10</version>
+	    <version>5.0.0-alpha</version>
 	</dependency>
 
 	</dependencies>
